Revert "Web Journal"
This reverts commit b9b1503f1087b16f704cb3974ff4ca212a442867.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>ARTS 412 Journal | Chaalam Wilson</title>
+		<title>ARTS XXX Journal | Firstname Lastname</title>
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/grid-utils.css">
 		<link rel="stylesheet" href="css/style.css">
@@ -25,16 +25,16 @@
 				<div class="width-12-12-m width-4-12 height-8" id="aside">
 					<div class="aside-holder">
 						<div class="thumb-box">
-							<h3>ARTS 412<br />
-							Graphic Design Software II</h3>
+							<h3>ARTS XXX<br />
+							Course Name Goes Here</h3>
 							<div class="half">
-								<img class="r-image" src=images/Pro_Pic.png title="Chaalam Wilson" />
+								<img class="r-image" src="https://via.placeholder.com/700" title="image title" />
 							</div>
 							<div class="half">
-								<h4>Chaalam Wilson</h4>
-								<p>Chaalam Wilson is currently studying at Binghamton University receiving his Bachelor's of Arts in Graphic Design May 2020. A former Engineering major, he realized his passion for the arts his sophomore year and never looked back. Combining his analytical eye with a love for design, Chaalam is currently a freelance designer and aims for a career in advertising.</p>
+								<h4>Firstname Lastname</h4>
+								<p>Short bio here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In rutrum efficitur imperdiet. Morbi nibh turpis, posuere ac fermentum ac, tincidunt sit amet tortor.</p>
 								<p>
-									<a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" target="_blank">Portfolio, One Day</a>
+									<a href="http://binghamton.edu" target="_blank">This is a link</a> <a href="http://binghamton.edu" target="_blank">This is another link</a> <a href="http://binghamton.edu" target="_blank">Third link</a>
 								</p>
 							</div>
 						</div>
@@ -50,66 +50,56 @@
 				</div>
 
 				<div class="width-6-12-m width-4-12 thumb">
-					<img class="r-image" src="images/Final.png" title="Stuck in Love" />
+					<img class="r-image" src="https://via.placeholder.com/600" title="image title" />
 					<div class="body">
-						<h1>Project 1:  Riddle Me This</h1>
-						<p>
-							<img class="r-image" src="images/Sketch1.jpg" title="Love, Summer, Wild Sketches">
-							<img class="r-image" src="images/Sketch2.jpg" title="Name, West, Land Sketches">
-							<img class="r-image" src="images/Swatches.png" title="Swatches">
-							<img class="r-image" src="images/Sil_v1.png" title="Stuck in Love v2">
-							<img class="r-image" src="images/IW_v1.png" title="Into the Wild v2">
-							<img class="r-image" src="images/IgW_v1.png" title="Ingrid Goes West v2 b/w">
-							<img class="r-image" src="images/IgW_v2.png" title="Ingrid Goes West v2 color">
-							<img class="r-image" src="images/LLL_v1.png" title="La La Land v2">
-							<img class="r-image" src="images/Final.png" title="Stuck in Love" />
-						</p>
-						<p>For our first Project, the class was instructed to break into small groups and create Typographic Riddles. BeiBei, Kerri, Lucy, Maya, Yiqin, and I decided to narrow the assignment down to riddles based solely on movies, and our peers soon followed suit. The goal was to guess the title of the movie with as little illustration as possible. The sketches are of "Stuck in Love", "500 Days of Summer", "Into the Wild", "Call Me By Your Name", "Ingrid Goes West", and "La La Land", respectively. Once we landed on a color palette, I chose a few of my sketches to bring into Illustrator. After rejoining with the entire class, we all agreed on a palette and font that fit better with everyone's designs. 
+						<h1>Project 1:  Ipsum Lorem</h1>
+						<p><img class="r-image" src="https://via.placeholder.com/1600x900"></p>
+						<p>Add a short description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ex magna, blandit nec viverra faucibus, placerat convallis ipsum. Cras semper ipsum eget ullamcorper ultricies. Curabitur sit amet justo eu sapien molestie bibendum id in enim. Integer semper risus eget nibh eleifend, at vulputate risus laoreet. 
 						</p>
 					</div>
 				</div>
 				<div class="width-6-12-m width-4-12 thumb">
 					<img class="r-image" src="https://via.placeholder.com/600" title="image title" />
 					<div class="body">
-						<h1>Project 2:</h1>
+						<h1>Project 1:  Ipsum Lorem</h1>
 						<p><img class="r-image" src="https://via.placeholder.com/1600x900"></p>
-						<p>Description 
+						<p>Add a short description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ex magna, blandit nec viverra faucibus, placerat convallis ipsum. Cras semper ipsum eget ullamcorper ultricies. Curabitur sit amet justo eu sapien molestie bibendum id in enim. Integer semper risus eget nibh eleifend, at vulputate risus laoreet. 
 						</p>
 					</div>
 				</div>
 				<div class="width-6-12-m width-4-12 thumb">
 					<img class="r-image" src="https://via.placeholder.com/600" title="image title" />
 					<div class="body">
-						<h1>Project 3:</h1>
+						<h1>Project 1:  Ipsum Lorem</h1>
 						<p><img class="r-image" src="https://via.placeholder.com/1600x900"></p>
-						<p>Description 
+						<p>Add a short description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ex magna, blandit nec viverra faucibus, placerat convallis ipsum. Cras semper ipsum eget ullamcorper ultricies. Curabitur sit amet justo eu sapien molestie bibendum id in enim. Integer semper risus eget nibh eleifend, at vulputate risus laoreet. 
 						</p>
 					</div>
 				</div>
 				<div class="width-6-12-m width-4-12 thumb">
 					<img class="r-image" src="https://via.placeholder.com/600" title="image title" />
 					<div class="body">
-						<h1>Project 4:</h1>
+						<h1>Project 1:  Ipsum Lorem</h1>
 						<p><img class="r-image" src="https://via.placeholder.com/1600x900"></p>
-						<p>Description 
+						<p>Add a short description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ex magna, blandit nec viverra faucibus, placerat convallis ipsum. Cras semper ipsum eget ullamcorper ultricies. Curabitur sit amet justo eu sapien molestie bibendum id in enim. Integer semper risus eget nibh eleifend, at vulputate risus laoreet. 
 						</p>
 					</div>
 				</div>
 				<div class="width-6-12-m width-4-12 thumb">
 					<img class="r-image" src="https://via.placeholder.com/600" title="image title" />
 					<div class="body">
-						<h1>Project 5:</h1>
+						<h1>Project 1:  Ipsum Lorem</h1>
 						<p><img class="r-image" src="https://via.placeholder.com/1600x900"></p>
-						<p>Description
+						<p>Add a short description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ex magna, blandit nec viverra faucibus, placerat convallis ipsum. Cras semper ipsum eget ullamcorper ultricies. Curabitur sit amet justo eu sapien molestie bibendum id in enim. Integer semper risus eget nibh eleifend, at vulputate risus laoreet. 
 						</p>
 					</div>
 				</div>
 				<div class="width-6-12-m width-4-12 thumb">
 					<img class="r-image" src="https://via.placeholder.com/600" title="image title" />
 					<div class="body">
-						<h1>Project 6:</h1>
+						<h1>Project 1:  Ipsum Lorem</h1>
 						<p><img class="r-image" src="https://via.placeholder.com/1600x900"></p>
-						<p>Description
+						<p>Add a short description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ex magna, blandit nec viverra faucibus, placerat convallis ipsum. Cras semper ipsum eget ullamcorper ultricies. Curabitur sit amet justo eu sapien molestie bibendum id in enim. Integer semper risus eget nibh eleifend, at vulputate risus laoreet. 
 						</p>
 					</div>
 				</div>
@@ -117,7 +107,7 @@
 		</div>
 
 		<div id="footer">
-			<p>©2020 Chaalam Wilson | Binghamton University</p>
+			<p>©2020 Firstname Lastname | Binghamton University</p>
 		</div>
 
 	</body>
