--- a/index.html
+++ b/index.html
@@ -50,39 +50,39 @@
 				</div>
 
 				<div class="width-6-12-m width-4-12 thumb">
-					<img class="r-image" src="images/Final.png" title="Stuck in Love" />
+					<img class="r-image" src="images/P1_S.png" title="P1_SPh" />
 					<div class="body">
 						<h1>Project 1:  Riddle Me This</h1>
 						<p>
 							<img class="r-image" src="images/Sketch1.jpg" title="Love, Summer, Wild Sketches">
 							<img class="r-image" src="images/Sketch2.jpg" title="Name, West, Land Sketches">
+						</p>
+						<p>For our first Project, the class was instructed to break into small groups and create Typographic Riddles. BeiBei, Kerri, Lucy, Maya, Yiqin, and I decided to narrow the assignment down to riddles based solely on movies, and our peers soon followed suit. The goal was to guess the title of the movie with as little illustration as possible. The sketches are of "Stuck in Love", "500 Days of Summer", "Into the Wild", "Call Me By Your Name", "Ingrid Goes West", and "La La Land", respectively. 
+						</p>
+					</div>
+				</div>
+				<div class="width-6-12-m width-4-12 thumb">
+					<img class="r-image" src="images/P1_D.png" title="P1_DPh" />
+					<div class="body">
+						<h1>Drafts</h1>
+						<p>
 							<img class="r-image" src="images/Swatches.png" title="Swatches">
 							<img class="r-image" src="images/Sil_v1.png" title="Stuck in Love v2">
 							<img class="r-image" src="images/IW_v1.png" title="Into the Wild v2">
 							<img class="r-image" src="images/IgW_v1.png" title="Ingrid Goes West v2 b/w">
 							<img class="r-image" src="images/IgW_v2.png" title="Ingrid Goes West v2 color">
 							<img class="r-image" src="images/LLL_v1.png" title="La La Land v2">
-							<img class="r-image" src="images/Final.png" title="Stuck in Love" />
 						</p>
-						<p>For our first Project, the class was instructed to break into small groups and create Typographic Riddles. BeiBei, Kerri, Lucy, Maya, Yiqin, and I decided to narrow the assignment down to riddles based solely on movies, and our peers soon followed suit. The goal was to guess the title of the movie with as little illustration as possible. The sketches are of "Stuck in Love", "500 Days of Summer", "Into the Wild", "Call Me By Your Name", "Ingrid Goes West", and "La La Land", respectively. Once we landed on a color palette, I chose a few of my sketches to bring into Illustrator. After rejoining with the entire class, we all agreed on a palette and font that fit better with everyone's designs. 
-						</p>
-					</div>
-				</div>
-				<div class="width-6-12-m width-4-12 thumb">
-					<img class="r-image" src="https://via.placeholder.com/600" title="image title" />
-					<div class="body">
-						<h1>Project 2:</h1>
-						<p><img class="r-image" src="https://via.placeholder.com/1600x900"></p>
-						<p>Description 
+						<p>Once we landed on a color palette, I chose a few of my sketches to bring into Illustrator.   
 						</p>
 					</div>
 				</div>
 				<div class="width-6-12-m width-4-12 thumb">
-					<img class="r-image" src="https://via.placeholder.com/600" title="image title" />
+					<img class="r-image" src="images/frontcover.png" title="Cover" />
 					<div class="body">
-						<h1>Project 3:</h1>
-						<p><img class="r-image" src="https://via.placeholder.com/1600x900"></p>
-						<p>Description 
+						<h1>Riddle Me This: Final Design</h1>
+						<p><img class="r-image" src="images/Final.png" title="Stuck in Love" /></p>
+						<p>Each group chose their best five or six designs, and after rejoining with the entire class, we all agreed on a palette and font that fit better with everyone's designs. You can view the entire class project <a href="Cover.html">here</a>
 						</p>
 					</div>
 				</div>
