--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 					<div class="body">
 						<h1>Riddle Me This: Final Design</h1>
 						<p><img class="r-image" src="images/Final.png" title="Stuck in Love" /></p>
-						<p>Each group chose their best five or six designs, and after rejoining with the entire class, we all agreed on a palette and font that fit better with everyone's designs. You can view the entire class project <a href="Cover.html">here</a>
+						<p>Each group chose their best five or six designs, and after rejoining with the entire class, we all agreed on a palette and font that fit better with everyone's designs. You can view the entire class project <a href= src= "Riddle Me This/Cover.html">here</a>
 						</p>
 					</div>
 				</div>
