--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 						<h1>Drafts</h1>
 						<p>
 							<img class="r-image" src="images/Swatches.png" title="Swatches">
-							<img class="r-image" src="images/Sil_v1.png" title="Stuck in Love v2">
+							<img class="r-image" src="images/SiL_v1.png" title="Stuck in Love v2">
 							<img class="r-image" src="images/IW_v1.png" title="Into the Wild v2">
 							<img class="r-image" src="images/IgW_v1.png" title="Ingrid Goes West v2 b/w">
 							<img class="r-image" src="images/IgW_v2.png" title="Ingrid Goes West v2 color">
