--- a/Page_3.html
+++ b/Page_3.html
@@ -51,7 +51,7 @@
 				</div>
 
 				<div class="width-8-12-m width-8-12">
-					<img class="nice-image" src="images/Page2.png" title="Handsman" />
+					<img class="nice-image" src="images/page2.png" title="Handsman" />
 				</div>
 
 				<div class="width-2-12-m width-2-12">
