--- a/Page_10.html
+++ b/Page_10.html
@@ -51,7 +51,7 @@
 				</div>
 
 				<div class="width-8-12-m width-8-12">
-					<img class="nice-image" src="images/Page9.png" title="Barua" />
+					<img class="nice-image" src="images/page9.png" title="Barua" />
 				</div>
 
 				<div class="width-2-12-m width-2-12">
