--- a/Page_12.html
+++ b/Page_12.html
@@ -51,7 +51,7 @@
 				</div>
 
 				<div class="width-8-12-m width-8-12">
-					<img class="nice-image" src="images/page11.png" title="Edmonson" />
+					<img class="nice-image" src="images/Page11.png" title="Edmonson" />
 				</div>
 
 				<div class="width-2-12-m width-2-12">
