--- a/Page_14.html
+++ b/Page_14.html
@@ -51,7 +51,7 @@
 				</div>
 
 				<div class="width-8-12-m width-8-12">
-					<img class="nice-image" src="images/Page13.png" title="Kallman" />
+					<img class="nice-image" src="images/page13.png" title="Kallman" />
 				</div>
 
 				<div class="width-2-12-m width-2-12">
