--- a/Page_15.html
+++ b/Page_15.html
@@ -51,7 +51,7 @@
 				</div>
 
 				<div class="width-8-12-m width-8-12">
-					<img class="nice-image" src="images/page14.png" title="DaCosta" />
+					<img class="nice-image" src="images/Page14.png" title="DaCosta" />
 				</div>
 
 				<div class="width-2-12-m width-2-12">
