--- a/Page_17.html
+++ b/Page_17.html
@@ -51,7 +51,7 @@
 				</div>
 
 				<div class="width-8-12-m width-8-12">
-					<img class="nice-image" src="images/page16.png" title="Greene" />
+					<img class="nice-image" src="images/Page16.png" title="Greene" />
 				</div>
 
 				<div class="width-2-12-m width-2-12">
