--- a/Page_24.html
+++ b/Page_24.html
@@ -51,7 +51,7 @@
 				</div>
 
 				<div class="width-8-12-m width-8-12">
-					<img class="nice-image" src="images/page23.png" title="Ciaravino" />
+					<img class="nice-image" src="images/Page23.png" title="Ciaravino" />
 				</div>
 
 				<div class="width-2-12-m width-2-12">
