--- a/Page_34.html
+++ b/Page_34.html
@@ -51,7 +51,7 @@
 				</div>
 
 				<div class="width-8-12-m width-8-12">
-					<img class="nice-image" src="images/page33.png" title="Tong" />
+					<img class="nice-image" src="images/Page33.png" title="Tong" />
 				</div>
 
 				<div class="width-2-12-m width-2-12">
