--- a/Page_23.html
+++ b/Page_23.html
@@ -51,7 +51,7 @@
 				</div>
 
 				<div class="width-8-12-m width-8-12">
-					<img class="nice-image" src="images/page22.png" title="Peacock" />
+					<img class="nice-image" src="images/PAGE22.png" title="Peacock" />
 				</div>
 
 				<div class="width-2-12-m width-2-12">
