--- a/Page_35.html
+++ b/Page_35.html
@@ -51,7 +51,7 @@
 				</div>
 
 				<div class="width-8-12-m width-8-12">
-					<img class="nice-image" src="images/page34.png" title="Wang" />
+					<img class="nice-image" src="images/PAGE34.png" title="Wang" />
 				</div>
 
 				<div class="width-2-12-m width-2-12">
