--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 					</div>
 				</div>
 				<div class="width-6-12-m width-4-12 thumb">
-					<img class="r-image" src="images/P2_S" title="P2_SPh" />
+					<img class="r-image" src="images/P2_S.png" title="P2_SPh" />
 					<div class="body">
 						<h1>Project 2: Working With the Past</h1>
 						<p><img class="r-image" src="https://via.placeholder.com/1600x900"></p>
