--- a/index.html
+++ b/index.html
@@ -90,14 +90,14 @@
 					<img class="r-image" src="images/P2_S.png" title="P2_SPh" />
 					<div class="body">
 						<h1>Project 2: Working With the Past</h1>
-						<p><img class="r-image" src="https://via.placeholder.com/1600x900"></p>
+						<p><img class="r-image" src="images/P2sketch.jpg" title="P2_Sketch"></p>
 						<p>In this project, we worked individually to create a 32-bit icon to represent a facet of our lives we deem important. I chose to create an icon for excersizing, and was stuck for a while on what exact part of "excersize" I would use to represent the word. After deciding on a dumbbell, I chose the 3/4 angle for maximum visibility in black and white.</p>
 					</div>
 				</div>
 				<div class="width-6-12-m width-4-12 thumb">
-					<img class="r-image" src="https://via.placeholder.com/600" title="image title" />
+					<img class="r-image" src="images/P2_D.png" title="P2_DPh" />
 					<div class="body">
-						<h1>Project 5:</h1>
+						<h1></h1>
 						<p><img class="r-image" src="https://via.placeholder.com/1600x900"></p>
 						<p>Description
 						</p>
