--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
 				<div class="width-6-12-m width-4-12 thumb">
 					<img class="r-image" src="images/P2_D.png" title="P2_DPh" />
 					<div class="body">
-						<h1></h1>
-						<p><img class="r-image" src="https://via.placeholder.com/1600x900"></p>
-						<p>Description
+						<h1>Draft</h1>
+						<p><img class="r-image" src="images/Icon_v1" title="Icon_Draft"></p>
+						<p>The hardest part of this design was making the lightsource make sense, but once I figured it out, the proportions were easy. 
 						</p>
 					</div>
 				</div>
