--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 					<img class="r-image" src="images/P2_D.png" title="P2_DPh" />
 					<div class="body">
 						<h1>Draft</h1>
-						<p><img class="r-image" src="images/Icon_v1" title="Icon_Draft"></p>
+						<p><img class="r-image" src="images/Icon_v1.png" title="Icon_Draft"></p>
 						<p>The hardest part of this design was making the lightsource make sense, but once I figured it out, the proportions were easy. 
 						</p>
 					</div>
