--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
 					</div>
 				</div>
 				<div class="width-6-12-m width-4-12 thumb">
-					<img class="r-image" src="https://via.placeholder.com/600" title="image title" />
+					<img class="r-image" src="images/P2_Dark.png" title="P2_Final" />
 					<div class="body">
-						<h1>Project 6:</h1>
-						<p><img class="r-image" src="https://via.placeholder.com/1600x900"></p>
-						<p>Description
+						<h1>Final Icon</h1>
+						<p><img class="r-image" src="images/P2_Dark.png"></p>
+						<p>After a group critique, it was agreed that the first draft of the icon was too minimalistic, and the dumbbell was getting lost. I added the left corner of dumbbell, and switched the color to add contrast.
 						</p>
 					</div>
 				</div>
