--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 					<img class="r-image" src="" title="" />
 					<div class="body">
 						<h1>Project 3: Digital Storytelling</h1>
-						<p><img class="r-image" src="images/412P3Outline.png" title="D1"></p>
+						<p><img class="r-image" src="images/412p3Outline.png" title="D1"></p>
 						<p>After being quarantined, I spent some time rewatching all of my favorite Marvel movies. For this project I decided to explore the character development of Iron Man, and potentially Captain America. For right now I have his motivations and character arc loosely plotted through the first 6-8 movies in the MCU. The first page would explore Tony Stark's "ordinary life", before the weapons that made him rich nearly killed him. The viewer would be given a choice between letting the new information affect them or not. The left gets Iron Man, and the right gets Justin Hammer. This would continue untill the events of Civil War, when the audience is givenn the same dilemma as the first: if you wanted to protect people but had to hurt them to do so, would you? The options are what Tony and Steve chose in the movie, and the user would likely have the chance to explare a similar train of decision making with Cap as a lense.</p>
 					</div>
 				</div>
