--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 							<img class="r-image" src="images/412_P3_Storyboard.png" title="Story">
 							<img class="r-image" src="images/412_P3_WebPages.png" title="Pages">
 						</p>
-						<p>After being quarantined, I spent some time rewatching all of my favorite Marvel movies. For this project I decided to explore the character development of Iron Man. The user is given a series of questions and scenarios, allowing them to see what they would do in similar circumstances. I knew that I wanted an old-school feel to the project, so I modelled it after games like Dragon's Lair and Akinator. I decided to give the webpage a static background and multiple sprites of the same character for different talking points. </p>
+						<p>After being quarantined, I spent some time rewatching all of my favorite Marvel movies. For this project I decided to explore the character development of Iron Man. The user is given a series of questions and scenarios, allowing them to see what they would do in similar circumstances. User options are placed on the left and right of the screen. I knew that I wanted an old-school feel to the project, so I modelled it after games like Dragon's Lair and Akinator. I decided to give the webpage a static background and multiple sprites of the same character for different talking points. </p>
 					</div>
 				</div>
 			</div>
