--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 								<h4>Chaalam Wilson</h4>
 								<p>Chaalam Wilson is currently studying at Binghamton University receiving his Bachelor's of Arts in Graphic Design May 2020. A former Engineering major, he realized his passion for the arts his sophomore year and never looked back. Combining his analytical eye with a love for design, Chaalam is currently a freelance designer and aims for a career in advertising.</p>
 								<p>
+									<a href="Knock.html">Final Project</a>
 									<a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" target="_blank">Portfolio, One Day</a>
 								</p>
 							</div>
