--- a/Knock.html
+++ b/Knock.html
@@ -1,20 +1,28 @@
-<html>
-
+<html lang="en">
   <head>
-    <title>Ultimate Superhero Aptitude Test</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Aptitude Test</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/grid-utils.css">
+    <link rel="stylesheet" href="css/gstyle.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono:300,700,700i&display=fallback" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="js/main.js"></script>
   </head>
 
   <body>
 
     <div class="wrapper">
       <div id="game-holder">
-        <div id="game" style="background-image: url(images/outside.png);">
-          <a class="center-button" href="enter.html"></a>
+        <div id="game">
+          <img src="images/outside.png" title="Knock">
+          <a href="enter.html">Enter</a></div>
         </div>
       </div>
-    </div>
     
+   <div id="footer">
+      <p>©2020 Chaalam Wilson | Binghamton University</p>
+    </div>
+
   </body>
 
 </html>
