--- a/Knock.html
+++ b/Knock.html
@@ -11,7 +11,7 @@
     <div class="wrapper">
       <div id="game-holder">
           <img src="images/outside.png" title="Knock">
-          <a href="enter.html">Enter</a></div>
+           <a class="big" href="enter.html">Enter</a></div>
     </div>
     
    <div id="footer">
