--- a/Knock.html
+++ b/Knock.html
@@ -10,8 +10,10 @@
 
     <div class="wrapper">
       <div id="game-holder">
-          <img src="images/outside.png" title="Knock">
-           <a class="big" href="enter.html">Enter</a></div>
+        <div class="grid">
+          <div class="width-12-12-m width-12-12">
+            <img src="images/outside.png" title="Knock">
+           <a href="enter.html"></a></div>
     </div>
     
    <div id="footer">
