--- a/Knock.html
+++ b/Knock.html
@@ -14,6 +14,8 @@
           <div class="width-12-12-m width-12-12">
             <img src="images/outside.png" title="Knock">
            <a href="enter.html"></a></div>
+        </div>
+      </div>  
     </div>
     
    <div id="footer">
