--- a/Knock.html
+++ b/Knock.html
@@ -10,10 +10,8 @@
 
     <div class="wrapper">
       <div id="game-holder">
-        <div class="grid">
-          <div class="width-12-12-m width-12-12">
-            <img src="images/outside.png" title="Knock">
-           <a href="enter.html"></a></div>
+          <img class="nice-image" src="images/outside.png" title="Knock">
+          <a href="enter.html"></a></div>
         </div>
       </div>  
     </div>
