--- a/Knock.html
+++ b/Knock.html
@@ -10,7 +10,7 @@
 
     <div class="wrapper">
       <div id="game-holder">
-          <img class="nice-image" src="images/outside.png" title="Knock">
+          <img src="images/outside.png" title="Knock">
           <a href="enter.html"></a></div>
         </div>
       </div>  
