--- a/Knock.html
+++ b/Knock.html
@@ -2,7 +2,6 @@
   <head>
     <title>Aptitude Test</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/grid-utils.css">
     <link rel="stylesheet" href="css/gstyle.css">
   </head>
 
@@ -11,10 +10,11 @@
     <div class="wrapper">
       <div id="game-holder">
           <img src="images/outside.png" title="Knock">
-          <a href="enter.html"></a></div>
-        </div>
-      </div>  
-    </div>
+          <div class="cbutton">
+            <button onclick="href='Enter.html';"></button>
+          </div>
+      </div>
+    </div>  
     
    <div id="footer">
       <p>©2020 Chaalam Wilson | Binghamton University</p>
