--- a/Knock.html
+++ b/Knock.html
@@ -10,9 +10,7 @@
     <div class="wrapper">
       <div id="game-holder">
           <img src="images/outside.png" title="Knock">
-          <div class="cbutton">
-            <button onclick="href='Enter.html';"></button>
-          </div>
+          <a href="Enter.html" class="cbutton"></a>
       </div>
     </div>  
     
