--- a/Enter.html
+++ b/Enter.html
@@ -1,9 +1,11 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>Aptitude Test</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/gstyle.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Sans|Josefin+Sans">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira Sans">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin Sans">
   </head>
 
   <body>
