--- a/Enter.html
+++ b/Enter.html
@@ -14,14 +14,11 @@
       <div id="game-holder">
           <img src="images/hello.png" title="Welcome">
           <div class="text"> 
-            Greetings, my name is Calculo. You look familiar, have we met before? Maybe my optics aren’t what they used to be. Anyway, my purpose is to determine whether or not you have what it takes to be the ultimate superhero. I am going to provide you with a series of questions and scenarios, and you just need to answer them honestly. First question: Do YOU think you have what it takes?
-            <a href="2ndQ.html" class="lbutton">
-              <img src="images/button.png">
-             Yes, of course!</a>
-            <a href="Humility.html" class="rbutton">
-              <img src="images/button.png">
-             I'm not sure</a>
-          </div>  
+            Greetings, my name is Calculo. You look familiar, have we met before? Maybe my optics aren’t what they used to be. Anyway, my purpose is to determine whether or not you have what it takes to be the ultimate superhero. I am going to provide you with a series of questions and scenarios, and you just need to answer them honestly. First question: Do YOU think you have what it takes?</div>
+          <a href="2ndQ.html" class="lbutton">
+            <img src="images/button.png">Yes, of course!</a>
+          <a href="Humility.html" class="rbutton">
+            <img src="images/button.png">I'm not sure</a> 
       </div>
     </div>  
     
