--- a/Enter.html
+++ b/Enter.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
   <head>
     <title>Aptitude Test</title>
@@ -10,25 +9,21 @@
 
   <body>
 
+
     <div class="wrapper">
+    <div id="game-holder-outer">
       <div id="game-holder">
           <img src="images/hello.png" title="Welcome">
           <div class="text"> 
             Greetings, my name is Calculo. You look familiar, have we met before? Maybe my optics aren’t what they used to be. Anyway, my purpose is to determine whether or not you have what it takes to be the ultimate superhero. I am going to provide you with a series of questions and scenarios, and you just need to answer them honestly. First question: Do YOU think you have what it takes?</div>
-          <a href="2ndQ.html" class="lbutton">
-            <img src="images/button.png">
-            <div class="btext">Yes, of course!</div>
-          </a>
-          <a href="Humility.html" class="rbutton">
-            <img src="images/button.png">
-            <div class="btext">I'm not sure</div>
-          </a> 
+          <a href="2ndQ.html" class="lbutton button-style">Yes, of course!</a>
+          <a href="Humility.html" class="rbutton button-style">I'm not sure</a> 
+          <p id="footer">©2020 Chaalam Wilson | Binghamton University</p>
       </div>
-    </div>  
-    
-   <div id="footer">
-      <p>©2020 Chaalam Wilson | Binghamton University</p>
+      </div>
     </div>
+  </div>
+
 
   </body>
 
