--- a/Knock.html
+++ b/Knock.html
@@ -3,20 +3,22 @@
     <title>Aptitude Test</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/gstyle.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira Sans">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin Sans">
   </head>
 
   <body>
 
-    <div class="wrapper">
+  <div class="wrapper">
+    <div id="game-holder-outer">
       <div id="game-holder">
           <img src="images/outside.png" title="Knock">
-          <a href="Enter.html" class="cbutton"></a>
+          <a href="Enter.html" class="cbutton button-style">Enter</a> 
+          <p id="footer">©2020 Chaalam Wilson | Binghamton University</p>
       </div>
-    </div>  
-    
-   <div id="footer">
-      <p>©2020 Chaalam Wilson | Binghamton University</p>
+      </div>
     </div>
+  </div>
 
   </body>
 
